# SaliencyDetection

./: .cproject  .gitignore  .project  CMakeLists.txt  CannyEdgeDetector.cpp  CannyEdgeDetector.h  ComputeIterativeSaliency.cpp  EdgeDetector.cpp  EdgeDetector.h  README.md  SaliencyDetector.cpp  SaliencyDetector.h  SaliencyMain.cpp
LegacySrc/: CalculatePerformance.cpp  CannyEdge  ComputeIterativeSaliency.cpp  ComputeRelativeSaliency.cpp  ComputeSaliency.cpp  ComputeVideoSaliency.cpp  GetDifferentScales.cpp  GetPyramidSaliency.cpp  GetScaleSpace.cpp  GetWindowStructure6.cpp  Group.cpp  Group.h  GroupElement.h  GroupParallel.cpp  GroupParallel.h  KDInfo.h  LBP.h  REM.cpp  REM.h  ScaleSpace.cpp  ScaleSpace.h  Smooth.cpp  TestKernel.cpp  TestPyramid.cpp  canny.c  gaussian_filter.c  histogram.c  histogram.h  image.cpp  rdtsc.h  test.cpp  test_jpeg.cpp
LegacySrc/.libs/: gsl-histogram  gsl-randist  libgsl.la  libgsl.lai
LegacySrc/archive/: ComputePyramidSaliency.cpp  GaussianPyramid.cpp  GaussianPyramid.h  GetSaliency.cpp  GetScaleRelations.cpp  GetScaleSpace.cpp  GetStructure.cpp  GetStructureUpdated.cpp  image.h
LegacySrc/edge/: canny.c  canny.h
LegacySrc/gaussian/: GaussianPyramid.cpp  GaussianPyramid.h
LegacySrc/image/: 1.pgm  IntegralImage.h  LBP.cpp  RImage.cpp  SauvolasThreshold.cpp  SauvolasThreshold.h  TestRImage  TestRImage.cpp  (+5 more)
OldSaliencyDetection/: CommonUtils.h  ComputeIterativeSaliency.cpp  ComputeVideoSaliency.cpp  ImageSequence.cpp  ImageSequence.h  KDInfo.h  Makefile  README  canny.h.gch  gaussian_filter.c  gaussian_filter.h  gaussian_filter.h.gch
(+1853 files in other folders)
